package vue;

public enum UserChoice {
    PASSER,PLACER;
}
